ignore model and weights
this is bring your own after all.. plus the weights are massive

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# added by Sam Murphy
+container/model/model.json
+container/model/weights.hdf5
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
