--- a/container/app/nginx.conf
+++ b/container/app/nginx.conf
@@ -24,7 +24,7 @@ http {
 
     keepalive_timeout 5;
 
-    location ~ ^/(ping|predict||) {
+    location ~ ^/(ping|invocations||) {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_redirect off;
